[main] fix sufire plugin configuration adding argline with required --add-opens parameters